force-app/main/default/objects/Office_Play__c/Office_Play__c.object-meta.xml
<CustomObject>
    <label>Office Play</label>
    <nameField>
        <label>Office Play Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Office Plays</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>