force-app/main/default/objects/Office_Play__c/fields/Allow_Guest_Players__c.field-meta.xml
<CustomField>
    <fullName>Allow_Guest_Players__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Guest Players</label>
    <type>Checkbox</type>
</CustomField>