force-app/main/default/objects/Office_Play__c/fields/Office_Map__c.field-meta.xml
<CustomField>
    <fullName>Office_Map__c</fullName>
    <label>Office Map</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>